deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-printing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-printing
  template:
    metadata:
      labels:
        app: backend-printing
    spec:
      restartPolicy: Always
      tolerations:
      - key: "CriticalAddonsOnly"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: backend-printing
        image: ""
        imagePullPolicy: Always
        command: ["uvicorn", "src.httptrigger:app", "--host", "0.0.0.0", "--port", "8000"]
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: acr-auth-secret
