gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-printing
  labels:
    app: backend-printing
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: backend-printing

---

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: backend-printing-gateway
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    istio: aks-istio-ingressgateway-internal
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

#kubectl apply -f <(istioctl kube-inject -f deploy.yaml -i aks-istio-system -r asm-1-21) -n default
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-printing-virtualservice
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - backend-printing-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: backend-printing.default.svc.cluster.local
        port:
          number: 8000
  - match:
    - uri:
        exact: /validator
    route:
    - destination:
        host: backend-printing.default.svc.cluster.local
        port:
          number: 8000
  - match:
    - uri:
        exact: /uploaddocumenttoup
    route:
    - destination:
        host: backend-printing.default.svc.cluster.local
        port:
          number: 8000
